--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -19,15 +19,27 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li>
-          <a class="nav-link" href="{% url 'index' %}">
-            <i class="fas fa-user-plus"></i> Register</a>
-        </li>
-        <li>
-          <a class="nav-link" href="/">
-            <i class="fas fa-sign-in-alt"></i>
-            Login</a>
-        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item mr-3">
+            <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                <i class="fas fa-sign-out-alt"></i> Logout
+            </a>
+            <form action="{% url 'logout' %}" method="POST" id="logout">
+                {% csrf_token %}
+                <input type="hidden">
+            </form>
+          </li>
+        {% else %}
+          <li>
+            <a class="nav-link" href="{% url 'register' %}">
+              <i class="fas fa-user-plus"></i> Register</a>
+          </li>
+          <li>
+            <a class="nav-link" href="{% url 'login' %}">
+              <i class="fas fa-sign-in-alt"></i>
+              Login</a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </div>
