--- a/templates/ether/main.html
+++ b/templates/ether/main.html
@@ -2,15 +2,29 @@
 
 {% block title %} | ether {% endblock %}
 
+{% load static %}
+
 {% block content %}
 
-<form action="{% url 'ether' %}" method="POST">
-    {% csrf_token %}
-    <div class="form-group">
+{% if user.is_authenticated %}
+    <form action="{% url 'ether' %}" method="POST">
+        {% csrf_token %}
         <center><label for="greeting">{{ say }}</label></center>
-        <input type="text" name="greeting" class="form-control" required>
-    </div>
-    <input type="submit" value="submit" class="btn btn-secondary btn-block">
-</form>
+        <input type="hidden" name="say" value="true">
+        <input type="hidden" name="etherAccount" value="{{ user.ethereum_account }}">
+        <input type="submit" value="submit" class="btn btn-secondary btn-block">
+    </form>
+    <form action="{% url 'ether' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" name="greeting" class="form-control" required>
+        </div>
+        <input type="hidden" name="etherAccount" value="{{ user.ethereum_account }}">
+        <input type="submit" value="submit" class="btn btn-secondary btn-block">
+    </form>
+{% else %}
+    <div> Please, Login. </div>
+
+{% endif %}
 
 {% endblock %}
