--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -20,6 +20,10 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
+          <li>
+            <a class="nav-link" href="{% url 'dashboard' %}">
+                Welcome, {{ user.username }} (Dashboard) </a>
+          </li>
           <li class="nav-item mr-3">
             <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
                 <i class="fas fa-sign-out-alt"></i> Logout
