--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -1,7 +1,7 @@
 {% if messages %}
     {% for message in messages %}
     <div id="message" class="container">
-        <div class="alert alert-{{message.tags}} alert-dismissible text-center" rol="alert">
+        <div class="alert alert-{{message.tags}} alert-dismissible text-white text-center bg-danger" rol="alert">
             <button type="button" class="close" data-dimiss="alert"><span aria-hidden="true">&times;</span></button>
         <strong>
             {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
