--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,4 +1,4 @@
-<section id="top-bar" class="p-3">
+<section id="top-bar top-background" class="p-3">
     <div class="container">
         <div class="row">
         <div class="col-md-4">
