--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -3,10 +3,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'index' %}">univerChain</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown2">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown2">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -16,6 +16,19 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'ether' %}">Ether</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Store
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{% url 'store:products' %}"> All </a></li>
+            {% for c in categories %}
+              <li>
+                <a class="dropdown-item" href="">{{ c.name|title }} </a>
+              </li>
+            {% endfor %}
+          </ul>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
