product detail update
- added detail page

--- a/templates/ether/main.html
+++ b/templates/ether/main.html
@@ -32,10 +32,10 @@
                 <label class="sr-only">grade</label>
                 <select name="grade" class="form-control">
                     <option selected="true" disabled="disabled">Grade (All)</option>
-                    <option value=1>1</option>
-                    <option value=2>2</option>
-                    <option value=3>3</option>
-                    <option value=4>4</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                 </select>
             </div>
             <input type="hidden" name="etherAccount" value="{{ user.ethereum_account }}">
