--- a/templates/store/category.html
+++ b/templates/store/category.html
@@ -7,31 +7,16 @@
 {% block content %}
 
 <main>
-
-  <section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="h1 fw-bold">UniverChain Store</h1>
-        <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Nunc blandit ante scelerisque augue consectetur iaculis. 
-        Donec erat sem, tincidunt sit amet metus in, elementum lobortis ex.</p>
-      </div>
-    </div>
-  </section>
-
   <div class="album py-5 bg-light">
     <div class="container">
-
-      <div class="pb-3 h5">All Products</div>
+      <div class="pb-3 h5">{{ category.name|title }}</div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
-
         {% for product in products %}
-
         <div class="col">
           <div class="card shadow-sm">
             <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
-              <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
-            <a>
+                <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
+            </a>
             <div class="card-body">
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
@@ -47,5 +32,4 @@
     </div>
   </div>
 </main>
-
 {% endblock %}
