--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -13,7 +13,9 @@
             </div>
             <div class="col-md-7 col-lg-7 ps-md-3 ps-lg-5">
                 <h1 class="mb-0 h4">{{ product.title }}</h1>
-                <p><span class="lead">{{ product.author }}</span> (Author)</p>
+                {% if product.author is not None %}
+                    <p><span class="lead">{{ product.author }}</span> (Author)</p>
+                {% endif %}
                 <p>{{ product.description|slice:":355" }}...</p>
                 <div class="border">
                     <div class="col border-bottom">
