--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -2,15 +2,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">univerChain</a>
+    <a class="navbar-brand" href="/">UniverChain</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown2">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown2">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'index' %}">Features</a>
         </li>
@@ -22,10 +19,10 @@
             Store
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'store:products' %}"> All </a></li>
-            {% for c in categories %}
+            <li><a class="dropdown-item" href="{% url 'store:product_all' %}"> All </a></li>
+            {% for category in categories %}
               <li>
-                <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name|title }} </a>
+                <a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name|title }} </a>
               </li>
             {% endfor %}
           </ul>
