--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block title %} | store {% endblock %}
 
@@ -12,9 +12,9 @@
     <div class="row py-lg-3">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="h1 fw-bold">UniverChain Store</h1>
-        <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Nunc blandit ante scelerisque augue consectetur iaculis. 
-        Donec erat sem, tincidunt sit amet metus in, elementum lobortis ex.</p>
+        <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc blandit ante scelerisque augue consectetur iaculis.
+          Donec erat sem, tincidunt sit amet metus in, elementum lobortis ex.</p>
       </div>
     </div>
   </section>
@@ -31,15 +31,16 @@
           <div class="card shadow-sm">
             <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
               <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
-            <a>
-            <div class="card-body">
-              <p class="card-text">
-                <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
-              </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">9min read</small>
-              </div>
-            </div>
+              <a>
+                <div class="card-body">
+                  <p class="card-text">
+                    <a class="text-dark text-decoration-none"
+                      href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                  </p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">9min read</small>
+                  </div>
+                </div>
           </div>
         </div>
         {% endfor %}
