--- a/templates/store/cart/summary.html
+++ b/templates/store/cart/summary.html
@@ -6,4 +6,53 @@
 
 {% block content %}
 
+<main class="pt-5">
+    <div class="container">
+        <h1 class="h5">Cart</h1>
+        {% for item in cart %}
+        {% with product=item.product %}
+        <div data-index="{{product.id}}" class="row mb-4 border product-item">
+            <div class="col-md-3 col-lg-2 order-md-first bg-light">
+                <img class="img-fluid mx-auto d-block" width="120px" alt="Responsive image"
+                    src="{{ product.image.url }}">
+            </div>
+            <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
+                <a href="{{ product.get_absolute_url }}" class="text-decoration-none text-reset">
+                    <h1 class="h5 pt-2">{{ product.title }}</h1>
+                </a>
+                <div class="border">
+                    <div class="col border-bottom">
+                        <div class="row p-3">
+                            <div class="col-6">Hardback Book</div>
+                            <div class="col-6 text-end"><span class="h6 fw-bold">{{ product.price }} UC</span></div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row p-3">
+                            <div class="col-12">
+                                <label for="select">Qty {{item.qty}}</label>
+                                <button type="button" id="remove-button" data-index="{{ product.id }}"
+                                    onClick="removeFromCart(this,'{% url "cart:cart_remove" %}', '{{ csrf_token }}')"
+                                    class="btn btn-outline-secondary btn-sm remove-button">
+                                    Remove
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endwith %}
+        {% endfor %}
+        <div class="col-12 text-end">
+            <div class="h6 fw-bold">Total Price: <div id="total-price" class="d-inline-flex">
+                    {{cart.get_total_price}} UC
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<script src="{% static 'js/cart.js' %}"></script>
+
 {% endblock %}
