--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     {% block content %} {% endblock %}
 
     {% include 'partials/_footer.html' %}
+    <script src="{% static 'js/cart.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
