--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -5,40 +5,39 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <main class="pt-5">
+<main class="pt-2">
+    <div class="container" style="max-width: 1000px">
         <div class="row g-3">
-            <div class="col-md-5 col-lg-5 order-md-first bg-light">
-                <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image"
-                    src="{{ product.image.url }}">
+            <div class="col-12 d-flex justify-content-between">
             </div>
-            <div class="col-md-7 col-lg-7 ps-md-3 ps-lg-5">
-                <h1 class="mb-0 h4">{{ product.title }}</h1>
-                {% if product.author is not None %}
-                <p><span class="lead">{{ product.author }}</span> (Author)</p>
-                {% endif %}
-                <p>{{ product.description|slice:":355" }}...</p>
-                <div class="border">
-                    <div class="col border-bottom">
-                        <div class="row p-3">
-                            <div class="col-6">Hardback</div>
-                            <div class="col-6 text-end"><span class="h4 fw-bold">{{ product.price }} UC</span></div>
+            <div class="col-md-5 ps-3 col-lg-5 order-md-last p-5 order-1">
+                <div class="d-grid gap-2">
+
+                    <div class="d-flex d-flex-inline justify-content-between">
+                        <div><span class="h3">{{ product.price }} UC</span>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="row p-3">
-                            <div class="col-6 text-end"><button type="button" id="add-button" value="{{ product.id }}"
-                                    class="btn btn-secondary btn-sm"
-                                    onClick="addToCart('{% url "cart:cart_add" %}', '{{ csrf_token }}')">Add to
-                                    Cart</button></div>
+                    <hr>
+                    <button type="button" id="add-button" value="{{product.id}}" onClick="addToCart('{% url "cart:cart_add" %}', '{{ csrf_token }}')" class="btn btn-success btn-lg btn-block">Add to
+                        cart</button>
+                </div>
+            </div>
+
+            <div class="col-md-7 col-lg-7 p-3">
+                <div class="card mb-3 border-0">
+                    <div class="row g-0">
+                        <div class="col-md-12">
+                            <div class="card-body p-1">
+                                <h1 class="mb-0 h2 pe-4 pb-4">{{ product.title }}</h1>
+                                <div class="bg-light"><img class="img-fluid mx-auto d-block" width="200px"
+                                        alt="Responsive image" src="{{ product.image.url }}"> </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
-</div>
-
-<script src="{% static 'js/cart.js' %}"></script>
+    </div>
+</main>
 
 {% endblock %}
