--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -38,7 +38,7 @@
                       href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                   </p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <small class="text-muted">9min read</small>
+                    <small class="text-muted">{{ product.price }} UC</small>
                   </div>
                 </div>
           </div>
