--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -17,7 +17,7 @@
           </div>
           <div class="card-body">
             {% include 'partials/_alerts.html' %}
-            <form action="{% url 'login' %}" method="POST">
+            <form action="{% url 'accounts:login' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
                 <label for="username">Username</label>
