--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,24 +11,27 @@
     <div class="row">
       <div class="col-md-6 mx-auto">
         <div class="card">
-          <div class="card-header bg-primary text-white">
-            <h4>
-              <i class="fas fa-sign-in-alt"></i> Login</h4>
+          <div class="card-header text-black">
+            <h4>Login</h4>
           </div>
           <div class="card-body">
-            {% include 'partials/_alerts.html' %}
             <form action="{% url 'accounts:login' %}" method="POST">
               {% csrf_token %}
+              {% if form.errors %}
+                <div class="alert alert-primary" rol="alert">
+                  Error: Username or Password is not correct.
+                </div>
+              {% endif %}
               <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" name="username" class="form-control" required>
+                <label for="username">{{ form.username.label }}<span class="text-muted small">
+                  </span></label>
+                {{ form.username }}
               </div>
-
               <div class="form-group">
-                <label for="password2">Password</label>
-                <input type="password" name="password" class="form-control" required>
+                <label for="password2">{{ form.password.label }}<span class="text-muted small">
+                  </span></label>
+                {{ form.password }}
               </div>
-
               <input type="submit" value="Login" class="btn btn-secondary btn-block">
             </form>
           </div>
