--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -26,6 +26,11 @@
             <i class="fas fa-home"></i> Home</a>
         </li>
         <li class="breadcrumb-item active"> Dashboard</li>
+        <ul class="navbar-nav ml-auto">
+          <li>
+            <a href="{% url 'accounts:edit_info' %}"> Change Info</a>
+          </li>
+        </ul>
       </ol>
     </nav>
   </div>
