--- a/templates/accounts/registeration/email.html
+++ b/templates/accounts/registeration/email.html
@@ -4,8 +4,8 @@ Hello {{ user.username }},
 
 This is univerChain auto mailing system.
 
-Please, click below linkl to activate yout account.
+Please, click link below to activate yout account.
 
-https://{{ domain }}{% url 'accounts:activate' uidb64=uid token=token %}
+http://{{ domain }}{% url 'accounts:activate' uidb64=uid token=token %}
 
 {% endautoescape %}
