--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -18,7 +18,7 @@
             <form action="{% url 'accounts:login' %}" method="POST">
               {% csrf_token %}
               {% if form.errors %}
-                <div class="alert alert-primary" rol="alert">
+                <div class="alert alert-primary" role="alert">
                   Error: Username or Password is not correct.
                 </div>
               {% endif %}
