--- a/templates/accounts/user/edit_info.html
+++ b/templates/accounts/user/edit_info.html
@@ -28,8 +28,17 @@
                             <h3>Change your info</h3>
                             {% endif %}
                             {% if form.errors %}
-                            <div class="alert alert-primary" rol="alert">
-                                Error: There is something wrong.
+                            <div id="errors">
+                                <div class="inner">
+                                    <p>There were some errors in the information you entered. Please correct the
+                                        following:</p>
+                                    <ul>
+                                        {% for field in form %}
+                                        {% if field.errors %}<li>{{ field.label }}: {{ field.errors|striptags }}</li>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </ul>
+                                </div>
                             </div>
                             {% endif %}
                             <div class="form-group">
@@ -43,10 +52,10 @@
                             </div>
                             <button type="submit" value="Edit" class="btn btn-secondary btn-block">Save Changes</button>
                         </form>
-                        <form class="p-3 px-4" action="{% url "accounts:delete" %}" method="post"> 
+                        <form class="p-3 px-4" action="{% url "accounts:delete" %}" method="post">
                             {% csrf_token %}
                             <p class="h3 pt-3">Delete Account</p>
-                            <p class="">Please, push the button below if you want to delete current account.</p>
+                            <p class="">Please, push the button below if you want to delete your current account.</p>
                             <button type="submit" class="btn btn-danger btn-block mb-4 mt-5">Delete</button>
                         </form>
                     </div>
