--- a/templates/orders/order_success.html
+++ b/templates/orders/order_success.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | delete account success {% endblock %}
+{% block title %} | order success {% endblock %}
 
 {% load static %}
 
@@ -10,7 +10,8 @@
     <div class="row p-5">
         <div class="col-md-6 mx-auto">
             <div class="text-black">
-                <h1 class="text-center">Delete Account Successfully</h1>
+                <h1 class="text-center">Order Successfully</h1>
+                <h4 class="text-center p-3">Please, wait until your transaction complete.</h4>
             </div>
         </div>
     </div>
