--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="{% url 'index' %}">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'ether' %}">Ether</a>
+          <a class="nav-link" href="{% url 'univercoin:check_univercoin' %}">UC</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
