--- a/templates/cart/summary.html
+++ b/templates/cart/summary.html
@@ -29,7 +29,7 @@
             </div>
             <div class="p-3 col-md-5 col-lg-4 order-md-last order-3">
                 <div class="d-grid gap-2">
-                    <a role="button" href="#" class="btn btn-success btn-lg btn-block" type="button">Checkout</a>
+                    <a role="button" href="{% url 'orders:add' %}" class="btn btn-success btn-lg btn-block" type="button">Checkout</a>
                 </div>
             </div>
             <div class="col-md-7 col-lg-8 p-3">
