--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -29,9 +29,10 @@
               </div>
               <div class="form-group">
                 <label for="password2">{{ form.password.label }}<span class="text-muted small">
-                  </span></label>
+                  </span> </label> 
                 {{ form.password }}
               </div>
+              <div class="text-align-right"><a href="{% url 'accounts:password_reset' %}"><u>Forgot password?</u></a></div>
               <input type="submit" value="Login" class="btn btn-secondary btn-block">
             </form>
           </div>
