--- a/templates/accounts/password_reset/confirm.html
+++ b/templates/accounts/password_reset/confirm.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="card-body">
                         <form method="POST" enctype="multipart/form-data">
-                            <p><b>Type your new password.</b></p>
+                            <p><b>Enter your new password.</b></p>
                             {% if form.errors %}
                             <div id="errors">
                                 <div class="inner">
