--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -11,10 +11,9 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-3">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="h1 fw-bold">UniverChain Store</h1>
-        <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Nunc blandit ante scelerisque augue consectetur iaculis.
-          Donec erat sem, tincidunt sit amet metus in, elementum lobortis ex.</p>
+        <h1 class="display-4">Store</h1>
+        <p class="lead text-muted p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Nunc blandit ante scelerisque augue consectetur iaculis.</p>
       </div>
     </div>
   </section>
@@ -24,26 +23,27 @@
 
       <div class="pb-3 h5">All Products</div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
-
+        {% if not products %}
+        <div class="col-12">There are no products.</div>
+        {% else %}
         {% for product in products %}
-
         <div class="col">
           <div class="card shadow-sm">
             <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
               <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
-              <a>
-                <div class="card-body">
-                  <p class="card-text">
-                    <a class="text-dark text-decoration-none"
-                      href="{{ product.get_absolute_url }}">{{ product.title }}</a>
-                  </p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <small class="text-muted">{{ product.price }} UC</small>
-                  </div>
-                </div>
+            </a>
+            <div class="card-body">
+              <p class="card-text">
+                <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">{{ product.price }} UC</small>
+              </div>
+            </div>
           </div>
         </div>
         {% endfor %}
+        {% endif %}
       </div>
     </div>
   </div>
