--- a/templates/accounts/registration/register.html
+++ b/templates/accounts/registration/register.html
@@ -53,9 +53,9 @@
                 {{ form.password_confirm }}
               </div>
               <div class="form-group">
-                <label for="etherAccount">{{ form.ethereum_account.label }}<span class="text-muted small">
+                <label for="etherAccount">{{ form.univercoin_account.label }}<span class="text-muted small">
                   </span></label>
-                {{ form.ethereum_account }}
+                {{ form.univercoin_account }}
               </div>
               <input type="submit" value="Register" class="btn btn-secondary btn-block">
               <p class="text-center p-2">
