--- a/templates/cart/summary.html
+++ b/templates/cart/summary.html
@@ -14,10 +14,13 @@
         <div class="col-12">
             <p>Manage your <b>items</b> in your cart</p>
         </div>
+        <hr/>
     </div>
     <div class="container" style="max-width: 1000px">
-
         <div class="row g-3">
+            {% if cart_items == 0 %}
+            <div class="col-12 py-4">Cart is empty <a href="{% url 'store:product_all' %}">Store</a></div>
+            {% else %}
             <div class="col-12 bg-light p-3 d-flex justify-content-between">
                 <div class="d-flex d-flex-inline">
                     <div class="pe-3">Order</div>
@@ -61,6 +64,7 @@
                 {% endwith %}
                 {% endfor %}
             </div>
+            {% endif %}
         </div>
     </div>
 </main>
