--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown2">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'index' %}">Features</a>
+          <a class="nav-link" href="{% url 'pages:index' %}">Features</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'univercoin:check_univercoin' %}">UC</a>
