--- a/templates/accounts/user/dashboard.html
+++ b/templates/accounts/user/dashboard.html
@@ -17,8 +17,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="{% url 'pages:index' %}">
-            <i class="fas fa-home"></i> Home</a>
+          <a href="{% url 'pages:home' %}">Home</a>
         </li>
         <li class="breadcrumb-item active"> Dashboard</li>
         <ul class="navbar-nav ml-auto">
