--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,12 +2,12 @@
 
 {% load static %}
 
-{% block title %} | Index {% endblock %}
+{% block title %} | Home {% endblock %}
 
 {% block content %}
 
 <header class="w3-display-container w3-content" style="max-width:1500px;">
-  <img class="w3-image" src="{% static 'images/cover.png' %}" alt="The Hotel" style="min-width:1000px" width="1500"
+  <img class="w3-image" src="{% static 'images/cover.png' %}" alt="The Hotel" width="1500"
     height="800">
   <div class="w3-display-left w3-padding w3-col l6 m8">
     <div class="w3-container background">
@@ -15,7 +15,7 @@
       <p class="lead"> Search many things by category.</p>
     </div>
     <div class="w3-container background w3-padding-16">
-      <form action="{% url 'pages:index' %}" method="POST">
+      <form action="{% url 'pages:home' %}" method="POST">
         {% csrf_token %}
         <div class="w3-row-padding" style="margin:0 -16px;">
           <div class="w3-half w3-margin-bottom">
