--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -4,6 +4,6 @@
   <div class="container p-4"></div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2021 Copyright:
-    <a class="text-dark" href="{% url 'pages:index' %}">univerchain.com</a>
+    <a class="text-dark" href="{% url 'pages:home' %}">univerchain.com</a>
   </div>
 </footer>
