--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown2">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'pages:index' %}">Features</a>
+          <a class="nav-link" href="{% url 'pages:home' %}">Features</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'univercoin:check_univercoin' %}">UC</a>
@@ -47,8 +47,7 @@
         </li>
         <li class="nav-item mr-3">
           <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
-            <i class="fas fa-sign-out-alt"></i> Logout
-          </a>
+            Logout</a>
           <form action="{% url 'accounts:logout' %}" method="POST" id="logout">
             {% csrf_token %}
             <input type="hidden">
@@ -57,11 +56,10 @@
         {% else %}
         <li>
           <a class="nav-link" href="{% url 'accounts:register' %}">
-            <i class="fas fa-user-plus"></i> Register</a>
+            Register</a>
         </li>
         <li>
           <a class="nav-link" href="{% url 'accounts:login' %}">
-            <i class="fas fa-sign-in-alt"></i>
             Login</a>
         </li>
         {% endif %}
