--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -6,7 +6,7 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-            <i class="fas fa-envelope-open"></i> sammiee5311@gmail.com
+            sammiee5311@gmail.com
         </div>
         </div>
     </div>
