--- a/univerchain/templates/pages/home.html
+++ b/univerchain/templates/pages/home.html
@@ -9,7 +9,7 @@
 <header class="w3-display-container w3-content" style="max-width:1500px;">
   <img class="w3-image" src="{% static 'images/cover.png' %}" alt="The Hotel" width="1500"
     height="800">
-  <div class="w3-display-left w3-padding w3-col l6 m8">
+  <div class="w3-display-left w3-padding w3-col l6 m8" id="search-box">
     <div class="w3-container background">
       <h1 class="">Ether</h1>
       <p class="lead"> Search many things by category.</p>
