--- a/univerchain/templates/attendance/authentication_fail.html
+++ b/univerchain/templates/attendance/authentication_fail.html
@@ -11,7 +11,7 @@
         <div class="col-md-6 mx-auto">
             <div class="text-black">
                 <h1 class="text-center">Authentication Failed</h1>
-                <h4 class="text-center p-3">You are not authenticated to access this page.</h4>
+                <h4 class="text-center p-3">you are not authorized to access this page.</h4>
             </div>
         </div>
     </div>
