--- a/univerchain/templates/orders/order_fail.html
+++ b/univerchain/templates/orders/order_fail.html
@@ -11,7 +11,8 @@
         <div class="col-md-6 mx-auto">
             <div class="text-black">
                 <h1 class="text-center">Order Failed</h1>
-                <h4 class="text-center p-3">Please, check your UC balance or Order # is exist on your ordered List.</h4>
+                <h4 class="text-center p-3">Please, check your UC balance or</h4>
+                <h4 class="text-center">Order # exist on your ordered List.</h4>
             </div>
         </div>
     </div>
