--- a/univerchain/templates/store/category.html
+++ b/univerchain/templates/store/category.html
@@ -27,14 +27,19 @@
         <div class="col">
           <div class="card shadow-sm">
             <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
-              <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
+              {% for product_image in product.product_image.all %}
+                {% if product_image.is_feature %}
+                    <div class="bg-light"><img class="img-fluid mx-auto d-block" width="200px"
+                            alt="Responsive image" src="{{ product_image.image.url }}" alt="{{ product_image.image.alt_text }}"></div>
+                {% endif %}
+              {% endfor %}
             </a>
             <div class="card-body">
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
               </p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">{{ product.price }} UC</small>
+                <small class="text-muted">{{ product.regular_price }} UC</small>
               </div>
             </div>
           </div>
